test/syntax/wrong/unused3.kk
function main() {
  val xs = [1,2,3]
  1 xs.length
}